--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "stdio.h": "c",
         "lua.h": "c",
         "lualib.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "stdarg.h": "c",
+        "time.h": "c"
     }
 }
