--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,94 @@
         "lualib.h": "c",
         "string.h": "c",
         "stdarg.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "__bit_reference": "cpp",
+        "__config": "cpp",
+        "__locale": "cpp",
+        "__threading_support": "cpp",
+        "__verbose_abort": "cpp",
+        "bitset": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "execution": "cpp",
+        "initializer_list": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "tuple": "cpp",
+        "typeinfo": "cpp",
+        "variant": "cpp",
+        "algorithm": "cpp",
+        "inet.h": "c",
+        "in.h": "c",
+        "unistd.h": "c",
+        "socket.h": "c",
+        "netdb.h": "c",
+        "index.h": "c",
+        "array": "c",
+        "vector": "c",
+        "__node_handle": "cpp",
+        "deque": "cpp",
+        "__memory": "cpp",
+        "optional": "cpp",
+        "_pthread_types.h": "c",
+        "buildsystem.h": "c",
+        "cxdiagnostic.h": "c",
+        "cxerrorcode.h": "c",
+        "cxfile.h": "c",
+        "cxsourcelocation.h": "c",
+        "cxstring.h": "c",
+        "externc.h": "c",
+        "platform.h": "c",
+        "__hash_table": "c",
+        "__tree": "c",
+        "type_traits": "c",
+        "limits.h": "c",
+        "documentation.h": "c",
+        "luaconf.h": "c",
+        "_null.h": "c",
+        "_clock_t.h": "c",
+        "_types.h": "c",
+        "stddef.h": "c",
+        "availability.h": "c",
+        "cdefs.h": "c",
+        "__split_buffer": "cpp",
+        "print": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "unordered_map": "cpp",
+        "sqlite3.h": "c",
+        "memory": "cpp",
+        "map": "cpp",
+        "__availability": "c",
+        "uv.h": "c",
+        "pthread.h": "c",
+        "__stddef_max_align_t.h": "c",
+        "dirent.h": "c",
+        "_stdio.h": "c",
+        "_seek_set.h": "c"
     }
 }
